--- a/style.css
+++ b/style.css
@@ -1,5 +1,47 @@
+
+body {
+    max-width: 1000px;
+    margin:auto;
+    background-color:rgb(56, 58, 58);
+    border-left: 2px solid black;
+    border-right: 2px solid black;
+}
+
+.container {
+    min-height: 1000px;
+    text-align: center;
+    background-color: rgb(116, 233, 161);
+}
+
+.board{
+    max-width: 1000px;
+    margin:auto;
+}
+
+.boardcontainer {
+    padding-top:50px;
+}
+
+table{
+    margin-top:20px;
+    background: blue;
+    min-width: 400px;
+    min-height: 400px;
+}
+
 td{
+    background-color: white;
     border: 2px solid black;
+    border-radius: 50%;
     width: 20px;
     height: 20px;
 }
+
+.X {
+    background-color: black;
+}
+
+.O {
+    background-color: red;
+}
+
